updates first two paragraph with new gdocs version

--- a/en/modules/ROOT/pages/why-decidim.adoc
+++ b/en/modules/ROOT/pages/why-decidim.adoc
@@ -10,13 +10,20 @@ endif::[]
 
 include::{partialsdir}/README.adoc[tag=metadata]
 
+
 The context that has given birth to Decidim is defined by two interconnected phenomena, each of which displays two poles. On the one hand, the last decades have witnessed a crisis of representative democracy (weakening of the Welfare State, subordination to market forces, inability to deal with global problems such as climate change, etc.) as well as the essay with some alternatives, such as grassroots organizations, new parties and institutional forms. On the other, the rise of cognitive capitalism, a system where the exploitation of information, knowledge, affects, and social relations has become core to the generation of economic value, is opposed by the emergence of free software, knowledge and culture. Both phenomena are deeply intertwined, and Decidim is born right at their very intersection, responding to the challenges and opportunities that they open for democracy. In this section, we briefly analyze these two phenomena, with a special focus on the way they impact contemporary democracy.
 
 == The contemporary crisis of democracy and its alternatives
 
-*Success and decline of liberal, representative democracies*. The structures of representative democracy have barely been updated in the last two centuries. The last three decades have seen both their success (with the multiplication of liberal democratic states all over the world) and their declinefootnote:[The decline has been ongoing for the last two decades, at least (Rosanvallon, 2008), and has been noticed across the “ideological and methodological spectrum” (Tormey 2015: 15). So much so that the crisis of liberal representative democracy has been identified with the crisis of democracy itself (Keane 2009; DellaPorta 2013). Different authors have denounced the technocratic tendencies and the neoliberal hegemony in this same period as heralding a stage of post-democracy (Crouch, 2004) or post-politics (Zizek, 1999; Rancière, 2001), while others, in a more limited way, have used the term "post-representation" to refer to the emptying of power and meaning of representative institutions, by dynamics ranging from globalization and the dismantling of the welfare state to dis-affection and dis-empowerment (Brito Vieira and Runciman, 2008; Keane, 2009; Rosanvallon, 2011; Tormey, 2015). The readings of “post-representation” are multiple, though, connected with different political readings of the crisis and the potential ways out of it, from those that give conjunctural readings to those that tie it to the transformations of modernity, its subjectivities and modes of sociality (Tormey, 2015).] (as diagnosed in a wide literature ranging from Pharr & Putnam, 1999 to Tormey, 2015). The decline has been symptomatized in various forms; we will mention two: practically, in the inability of contemporary democracies to deal with problems such as climate change (Klein, 2015) or rising inequality (Piketty, 2014); politically, in the decline of participation and trust in political parties and political representatives, as well as other political institutions (Mair, 2006; Castells, 2017).
+*Success and decline of liberal, representative democracies*. The basic structures of representative democracy have barely been updated in the last two centuries. The last three decades have seen both their success (with the multiplication of liberal democratic states all over the world) and their declinefootnote:[The decline has been ongoing for the last two decades, at least (Rosanvallon, 2008), and has been noticed across the “ideological and methodological spectrum” (Tormey 2015: 15). So much so that the crisis of liberal representative democracy has been identified with the crisis of democracy itself (Keane 2009; DellaPorta 2013). Different authors have denounced the technocratic tendencies and the neoliberal hegemony in this same period as heralding a stage of post-democracy (Crouch, 2004) or post-politics (Zizek, 1999; Rancière, 2001), while others, in a more limited way, have used the term "post-representation" to refer to the emptying of power and meaning of representative institutions by dynamics ranging from globalization and the dismantling of the welfare state to dis-affection and dis-empowerment (Brito Vieira and Runciman, 2008; Keane, 2009; Rosanvallon, 2011; Tormey, 2015). The meanings of “post-representation” are multiple, though, connected with different political readings of the crisis and the potential ways out of it, from those that give conjunctural interpretations to those that tie it to the transformations of modernity, its subjectivities and modes of sociality (Tormey, 2015).] (as diagnosed in a wide literature ranging from Pharr & Putnam, 1999 to Tormey, 2015). The decline has been expressed in various forms; we will mention two: practically, in the inability of contemporary democracies to deal with problems such as rising inequality (Piketty, 2014) or climate change (Klein, 2015); politically, in the decline of participation and trust in political parties and political representatives, as well as other political institutions (Mair, 2006; Castells, 2017).
 
-**Structural limits of representative democracy: the triple challenge of complexity**footnote:[This section is a theoretical reconstruction of aspects that are historically embedded and power-laden.]*.* The structure of modern democracies is based on representation (and, more specifically, electoral representation, Manin 1997, Van Reybrouck 2016) on a series of mechanisms by which a few actors (political and administrative) are elected to manage public issues in the name of the whole of the citizenry, and are (in principle) accountable to it. To deal with complexity, both in society (specially, diversity of interests) and in reality (specially, multifacetedness of problems) more broadly, has been a recurrent challenge. Representation had its roots in medieval institutions, as a mechanism for nobles and knights to push their demands in exchange for consenting taxation (Pitkin, 1967). But it has proven its limits in coping with complexity and conflict: the complexity and conflictuality of the will, of reality, and of organization. First, it had to face the growth of the franchise, incorporating an ever more diverse constituency, and, second, in the last decades of the XXth century, the rise of consumerism and the ideology of consumer choice (Laclau & Mouffe, 1985; Sennett, 1977, 1998), generating an ever-growing variety of desires and perspectives to be listened to and articulated in government action. Second, as a result of a variety of factors, including the relative independence, long term positions and low numbers of representatives, it has proven open to systemic practices of nepotism or corruption (Buchanan & Tullock, 1962; Peltzmann, 1976). In both cases, the will of the few has ended up imposing itself over the complex and conflictual wills of the people in public policy. The second key challenge of complexity had to do with reality. As the technoscientific transformation of reality accelerated, the complexity of the problems facing public policy has only increased; and yet many of the systems for detecting social problems and mobilizing social knowledge to address them have remained oligarchic and exclusive. The attack Friedrich Hayek (1944, 1945) launched to socialist planning can be launched against representative democracy too: reality is too complex for a centralized decision-making system. The third challenge of complexity fed back into the previous two: it is the challenge (or meta-challenge) of communication and organization. Mobilizing and organizing the will, the knowledge, and the collective action of society faced numerous socio-technological limits: the millions of members composing a given social group could not express their will nor contribute their knowledge and effort to address matters of concernfootnote:[Organization or knowledge may be insufficient to solve the problems facing democracy today. However, we there are reasons to believe they can contribute to do so.]. Still in the XXth century, the time and infrastructure required to bring an expression of will or knowledge of people distributed geographically or socioeconomically (f.i.: laborally) into a common problem or decision seemed out of reach. Even if they wanted, people could not gather in assemblies or other political processes: the people were too many, lived far from each other, had their work schedules, and barely any free time at all. Representative democracy, where the many elect a few every four years, became a raw and oversimplified articulation of the will and knowledge of the many, in terms of the management by the few. So raw and simplified that it couldn’t solve the problems of society and became one of them: the people’s will was never represented but captured, the problems were not solved by representatives, but externalized to the market to be solved, while the problems generated by the market too often remain unsolved.
+*Structural limits of representative democracy*: the triple challenge of complexity.footnote:[This section is a theoretical reconstruction of aspects that are historically embedded and power-laden.] The structure of modern democracies is based on representation (and, more specifically, electoral representation, Manin 1997, Van Reybrouck 2016), that is, on a series of mechanisms by which a few actors (political and administrative) are elected to manage public issues in the name of the whole of the citizenry, and are in principle accountable to it. Representation had its roots in medieval institutions, as a mechanism for nobles and knights to push their demands in exchange for consenting taxation (Pitkin, 1967). But it has proven its limits in coping with complexity and conflict: the complexity and conflictuality of society, of reality, and of organization.
+
+1.  In social terms, it had to face the growth of the franchise, incorporating an ever more diverse constituency, and, in the last decades of the XXth century, the rise in cultural diversity, consumerism and the ideology of consumer choice in Western democracies (Laclau & Mouffe, 1985; Sennett, 1977, 1998) that generated an ever-growing variety of desires and perspectives to be listened to and articulated in government action. Furthermore, representation has proven open to systemic practices of nepotism or corruption, usually by powerful economic interests (Buchanan & Tullock, 1962; Peltzmann, 1976). In this context, representative mechanisms have ended up imposing the will of the few over the complex and conflictual wills of the people in public policy.
+2.  The second key challenge of complexity had to do with the reality. As the technoscientific transformation of reality accelerated, the responsibility and complexity of the problems facing public policy (f.i.: climate change) has only increased; and yet many of the systems for detecting social problems and mobilizing social knowledge to address them have remained oligarchic. The attack Friedrich Hayek (1944, 1945) launched on socialist planning can be launched against representative democracy too: reality is too complex for a centralized decision-making system.
+3.  The third challenge of complexity fed back into the previous two: it is the challenge (or meta-challenge) of communication and organization. Mobilizing and organizing the will, the knowledge, and the collective action of society into public policy faced numerous socio-technological limits: the millions of members composing a given social group could not express their will nor contribute their knowledge and effort to address their matters of concernfootnote:[Organization or knowledge may be insufficient to solve the problems facing democracy today. However, we there are reasons to believe they can contribute to do so.]. Still in the XXth century, the infrastructure required to bring an expression of will or knowledge of people distributed geographically or socioeconomically (f.i.: laborally) into a common problem or decision seemed out of reach. Even if they wanted, people could not gather in assemblies or other political processes: people were too many, lived far from each other, had their work schedules, and no free time at all.
+
+Representative democracy, where the many elect a few every four years, became a raw and oversimplified articulation of the will and knowledge of the many, in terms of the management by the few. So raw and simplified that it couldn’t solve the problems of society and became one of them: the people’s will was not represented or properly constructed but captured, the real problems were not solved by public representatives, but externalized to the market to be solved, and the problems generated by the market too often remained unsolved.
 
 *Technological conditions for going beyond representative democracy: the opportunity of digital networks.* Some of the conditions for addressing these problems have changed in the last decades with the advance of information and communication technologies. As has been repeatedly stressed, these technologies allow to overcome many of the spatial and temporal barriers that have traditionally haunted democracy: direct participation may take place without people having to share space and time. This allows to think democracy in terms of new scales and forms. From the political or the scientific to the public sphere, ICTs and ICT-based practices allow the circulation of information and knowledge (a form of de-intermediation from traditional authorities and gatekeepers, Castells, 2009) as well as its filtering on both problems and ways to address them (Benkler, 2006). This may contribute to address the challenge of complexity mentioned earlier. Participatory forms of politics may emerge or consolidate, thanks to digital platforms, contributing to mentioned earlier or to bring about participatory ecosystems rearticulating people´s will and action. Both of these advances primarily result of how ICTs affect forms of organization (Earl & Kimport, 2011). The challenges of complexity remain, but it seems that ICTs and practices associated to them may contribute to address (or transform) those challenges. In section 2, we make some suggestions on how Decidim may help on this regard.
 
